# StringMap

./: .gitignore  Makefile  README.md  StringMap.pro  data-stringmap.cabal  prologue.txt
Data/: PrefixTree.hs  StringMap.hs
Data/PrefixTree/: Core.hs  FuzzySearch.hs  PrefixSet.hs  Types.hs
Data/StringMap/: Base.hs  Dim2Search.hs  FuzzySearch.hs  Lazy.hs  PrefixSet.hs  Strict.hs  StringSet.hs  Types.hs
benchmarks/: Makefile  StringMap.hs
benchmarks/space/: Space.hs  en_US-with-S1-C1-S2-C2-S3-C3-key1-impl.stat  en_US-with-S1-C1-S2-C2-S3-key1-impl.stat  en_US-with-S1-C1-S2-C2-key1-impl.stat  en_US-with-S1-C1-key1-impl.stat  en_US-with-S1-key1-impl.stat  en_US-with-old-key1-impl.stat  space.cabal
tests/: Dim2Test.hs  SimpleStrictTest.hs  StringMapProperties.hs  StringMapStrict.hs  stringmap-properties.hs
