name: data-stringmap
version: 1.0
license: MIT
license-file: LICENSE
author: Uwe Schmidt
maintainer: uwe@fh-wedel.de
bug-reports: https://github.com/sebastian-philipp/StringMap/issues
synopsis: An efficient implementation of maps from strings to arbitrary values
category: Data Structures
description:
    An efficient implementation of maps from strings to arbitrary values.
    Values can associated with an arbitrary byte key. Searching for keys is very fast, but
    the prefix tree probably consumes more memory than "Data.Map". The main differences are the special
    'prefixFind' functions, which can be used to perform prefix queries. The interface is
build-type: Simple
cabal-version:  >=1.8
extra-source-files:
    tests/*.hs
    benchmarks/*.hs

source-repository head
    type:     git
    location: https://github.com/sebastian-philipp/StringMap.git

Library
    build-depends: base >= 4.5 && < 5, deepseq >= 1.2, binary >= 0.5, containers >= 0.4

    ghc-options: -O2 -Wall

    exposed-modules:
        Data.StringMap
		Data.StringMap.StringSet
        Data.StringMap.Types

    other-modules:
        Data.StringMap.Base
        Data.StringMap.FuzzySearch
